--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask>=2.0
-Werkzeug>=2.0
-requests
-gunicorn
+Flask==2.0.1
+Werkzeug==2.0.1
+gunicorn==20.1.0
+requests==2.26.0
+flask-cors==3.0.10
